add contracts for strata v3 api

--- a/src/Shared/ExEtc.Contracts/ExEtc.Contracts.csproj
+++ b/src/Shared/ExEtc.Contracts/ExEtc.Contracts.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Strava\v3\Athletes\" />
+    <Folder Include="Strava\v3\Clubs\" />
+    <Folder Include="Strava\v3\Uploads\" />
+  </ItemGroup>
+
 </Project>
