add create workout handler + mediatr

--- a/src/Shared/ExEtc.Contracts/ExEtc.Contracts.csproj
+++ b/src/Shared/ExEtc.Contracts/ExEtc.Contracts.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Strava\v3\Uploads\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR.Contracts" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
